mengedit hands on 3

--- a/Hands_On_Pertemuan_3.ipynb
+++ b/Hands_On_Pertemuan_3.ipynb
@@ -69,6 +69,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "QiDON2L5osmL",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QiDON2L5osmL",
+        "outputId": "a34b4c7d-c9be-4501-f7d0-c5e583cdc8dc"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "defaultdict(<class 'int'>, {'ini': 3, 'adalah': 3, 'contoh': 3, 'lain': 1, 'yang': 1, 'lebih': 1, 'kompleks': 1})\n"
+          ]
+        }
+      ],
       "source": [
         "from collections import defaultdict\n",
         "\n",
@@ -102,24 +120,6 @@
         "\n",
         "# Display the result\n",
         "print(reduced)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QiDON2L5osmL",
-        "outputId": "a34b4c7d-c9be-4501-f7d0-c5e583cdc8dc"
-      },
-      "id": "QiDON2L5osmL",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "defaultdict(<class 'int'>, {'ini': 3, 'adalah': 3, 'contoh': 3, 'lain': 1, 'yang': 1, 'lebih': 1, 'kompleks': 1})\n"
-          ]
-        }
       ]
     },
     {
@@ -162,60 +162,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from collections import defaultdict\n",
-        "\n",
-        "# Map function: Splits text into words and pairs each word with the number 1\n",
-        "def map_function(text):\n",
-        "    for word in text.split():\n",
-        "        yield (word, 1)\n",
-        "\n",
-        "# Reduce function: Combines the counts of each word\n",
-        "def reduce_function(pairs):\n",
-        "    result = defaultdict(int)\n",
-        "    for word, count in pairs:\n",
-        "        result[word] += count\n",
-        "    return result\n",
-        "\n",
-        "# Example dataset\n",
-        "dataset = [\n",
-        "    \"ini adalah contoh\",\n",
-        "    \"ini adalah contoh lain\",\n",
-        "    \"ini adalah contoh yang lebih kompleks\"\n",
-        "]\n",
-        "\n",
-        "# Applying the MapReduce logic\n",
-        "# Step 1: Apply map function to each text in the dataset\n",
-        "mapped = []\n",
-        "for text in dataset:\n",
-        "    mapped.extend(map_function(text))\n",
-        "\n",
-        "# Step 2: Apply reduce function to aggregate word counts\n",
-        "reduced = reduce_function(mapped)\n",
-        "\n",
-        "# Display the result\n",
-        "print(reduced)"
-      ],
+      "execution_count": null,
+      "id": "hpU6qNj8A_jL",
       "metadata": {
         "id": "hpU6qNj8A_jL"
       },
-      "id": "hpU6qNj8A_jL",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "id": "85612e13",
-      "metadata": {
-        "id": "85612e13"
-      },
-      "source": [
-        "### 5. Tugas Tambahan: Custom MapReduce Algorithm\n",
-        "- Buat algoritma MapReduce lainnya, seperti menghitung rata-rata nilai, atau menghitung frekuensi kemunculan elemen tertentu di dalam dataset."
-      ]
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "from mrjob.job import MRJob\n",
         "\n",
@@ -247,25 +199,74 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    MRCountOpen.run()"
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "85612e13",
       "metadata": {
-        "id": "wEUhjf8WAzB6"
+        "id": "85612e13"
       },
-      "id": "wEUhjf8WAzB6",
+      "source": [
+        "### 5. Tugas Tambahan: Custom MapReduce Algorithm\n",
+        "- Buat algoritma MapReduce lainnya, seperti menghitung rata-rata nilai, atau menghitung frekuensi kemunculan elemen tertentu di dalam dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "id": "1db9ac1f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from mrjob.job import MRJob\n",
+        "\n",
+        "class MRCountOpen(MRJob):\n",
+        "\n",
+        "    def configure_args(self):\n",
+        "        super(MRCountOpen, self).configure_args()\n",
+        "        self.add_passthru_arg('--month', type=int, default=6, help='Month range for calculation in months')\n",
+        "\n",
+        "    def mapper(self, _, line):\n",
+        "        # Data dalam format: timestamp,open,high,low,close,volume\n",
+        "        fields = line.split(',')\n",
+        "        try:\n",
+        "            timestamp = float(fields[0])\n",
+        "            open_price = float(fields[1])\n",
+        "            end_time = 1726538400\n",
+        "            month = self.options.month\n",
+        "            start_time = end_time - (month * 30 * 24 * 3600)\n",
+        "\n",
+        "            # Jika timestamp dalam rentang waktu\n",
+        "            if start_time <= timestamp <= end_time:\n",
+        "                yield \"open_price\", (open_price, 1)\n",
+        "        except ValueError:\n",
+        "            pass  # Jika ada nilai yang tidak bisa di-parse, lewati baris ini\n",
+        "\n",
+        "    def reducer(self, key, values):\n",
+        "        total_open = 0\n",
+        "        count = 0\n",
+        "        for open_price, occurrences in values:\n",
+        "            total_open += open_price\n",
+        "            count += occurrences\n",
+        "        # Hitung rata-rata\n",
+        "        yield key, total_open / count if count != 0 else 0\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    MRCountOpen.run()"
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": []
     },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
     "language_info": {
       "name": "python"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
